--- a/thaisdelima-website/src/index.css
+++ b/thaisdelima-website/src/index.css
@@ -1,8 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Varela Round, 'Helvetica Neue', sans-serif;
+  color: #FFFFFF;
+
+  font-style: normal;
+  font-weight: normal;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
