--- a/thaisdelima-website/src/index.css
+++ b/thaisdelima-website/src/index.css
@@ -132,7 +132,7 @@ table {
 
 body {
   margin: 0;
-  font-family: Varela Round, 'Helvetica Neue', sans-serif;
+  font-family: 'Varela Round', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: normal;
   color: #ffffff;
